--- a/deployment/flask-deployment.yaml
+++ b/deployment/flask-deployment.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
         - name: flask-container
           # image: registry.gitlab.com/lucabrena/pss_assignment_1/kubernetes/flask
-          image: __DOCKER_IMAGE__
+          image: __IMAGE__
           imagePullPolicy: Always
           ports:
             - name: http-flask
