--- a/deployment/api-deployment.yaml
+++ b/deployment/api-deployment.yaml
@@ -17,7 +17,7 @@ spec:
         - name: registry.gitlab.com
       containers:
         - name: api-container
-          image: registry.gitlab.com/lucabrena/pss_assignment_1/kubernetes/api:build
+          image: __IMAGE__
           imagePullPolicy: Always
           ports:
             - name: http-api
