--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -8,7 +8,8 @@ metadata:
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
-  - http:
+  - host: prosviso.tk
+    http:
       paths:
       - path: /*
         backend:
