Added path prosviso.tk/* to forward all request to NGINX service

--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -10,7 +10,7 @@ spec:
   rules:
   - http:
       paths:
-      - path: /*
+      - path: prosviso.tk/*
         backend:
           serviceName: nginx
           servicePort: 80
