Added server_name to webapp.conf and tell ingress to use regex

--- a/nginx/webapp.conf
+++ b/nginx/webapp.conf
@@ -1,15 +1,16 @@
 # webapp.conf
 server {
-    listen 80;
+    isten 80;
+    server_name prosviso.tk;
 
     root /usr/share/nginx/html;
 
-    location ~ /api {
+    location ^~ /api {
         include uwsgi_params;
         uwsgi_pass uwsgi://api:6000;
     }  
 
-    location ~ /(greetings|delete|showall|counts) { 
+    location ^~ /(greetings|delete|showall|counts) { 
         include uwsgi_params;
         uwsgi_pass uwsgi://flask:5000;
     }
