--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -5,13 +5,14 @@ metadata:
   annotations:
     kubernetes.io/ingress.class: nginx
     nginx.ingress.kubernetes.io/rewrite-target: /
+    nginx.ingress.kubernetes.io/use-regex: "true"
     nginx.ingress.kubernetes.io/ssl-redirect: "false"
 spec:
   rules:
   - host: "prosviso.tk"
     http:
       paths:
-      - path: /
+      - path: /*
         backend:
           serviceName: nginx
           servicePort: 80
