--- a/nginx/webapp.conf
+++ b/nginx/webapp.conf
@@ -10,7 +10,7 @@ server {
         uwsgi_pass uwsgi://api:6000;
     }  
 
-    location ^~ /(greetings|delete|showall|counts) { 
+    location ~ /(greetings|delete|showall|counts) { 
         include uwsgi_params;
         uwsgi_pass uwsgi://flask:5000;
     }
