--- a/nginx/webapp.conf
+++ b/nginx/webapp.conf
@@ -1,11 +1,11 @@
 # webapp.conf
 server {
-    isten 80;
+    listen 80;
     server_name prosviso.tk;
 
     root /usr/share/nginx/html;
 
-    location ^~ /api {
+    location ~ /api {
         include uwsgi_params;
         uwsgi_pass uwsgi://api:6000;
     }  
