--- a/deployment/ingress.yaml
+++ b/deployment/ingress.yaml
@@ -11,7 +11,7 @@ spec:
   - host: "prosviso.tk"
     http:
       paths:
-      - path: /
+      - path: /*
         backend:
           serviceName: nginx
           servicePort: 80
